--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>RickAndMortyTournament</title>
+  <title>Rick and Morty Tournament</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="Rick and Morty Tournament is a web application shows which characters from the TV Show Rick and Morty are the most liked by the fanbase.">
+  <meta name="author" content="Gabriel Kaszewski">
+  <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
